test: service 및 controller test 추가